--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,18 @@ p {
     position: relative;
 }
 
+h3.heading {
+    color: #00bcd4;
+    text-transform: uppercase;
+    font-size: 16px;
+    font-weight: normal;
+    /* font-weight: bolder; */
+    /* font-family: 'Roboto'; */
+    /* color: #f8f8f8; */
+    /* font-weight: 300; */
+    letter-spacing: 1.5px;
+}
+
 .slogan {
     /* text-transform: uppercase; */
     font-style: italic;
@@ -64,17 +76,21 @@ p {
 
 .btn-large {
     background-color: white;
-    border: 1px solid #80cbc4;
-    color: #80cbc4;
+    /* border: 1px solid #80cbc4; */
+    border: 1px solid #00bcd4;
+    /* color: #80cbc4; */
+    color: #00bcd4;
     box-shadow: none;
     border-radius: 8px;
+    display: flex;
 }
 
 .btn-large:hover {
     background-image: none;
-    background-color: #80cbc4;
-    color: black;
-    border: 1px solid black;
+    /* background-color: #80cbc4; */
+    background-color: #00bcd4;
+    color: white;
+    border: 1px solid white;
     box-shadow: none;
 }
 
@@ -117,6 +133,7 @@ p {
 
 .submit-form {
     float: left;
+    padding-bottom: 20px;
 }
 
 .form-wrapper {
@@ -132,6 +149,11 @@ p {
     border-bottom: 1px solid #9e9e9e;
     padding-bottom: 10px;
     margin-bottom: 20px;
+}
+
+#form-row {
+    display: flex;
+    align-items: center;
 }
 
 p {
@@ -155,7 +177,7 @@ p {
 }
 
 #row1 {
-    display: flex;
+    /* display: flex; */
     width: 100%;
     flex-direction: row;
     padding: 20px 0;
