--- a/css/style.css
+++ b/css/style.css
@@ -28,10 +28,12 @@ body {
     letter-spacing: normal;
     position: relative;
     position: inherit;
+    margin: 0 auto;
+    overflow-y: hidden;
 }
 
 .body-container {
-    padding: 20px;
+    padding: 10px;
 }
 
 h1,
@@ -46,7 +48,8 @@ p {
 
 #logo-container {
     max-height: 42px;
-    padding: 0 8px;
+    /* padding: 0 8px; */
+    padding: 4px;
     display: flex;
     position: relative;
 }
@@ -54,15 +57,16 @@ p {
 h3.heading {
     color: #00bcd4;
     /* text-transform: uppercase; */
-    font-size: 28px;
+    font-size: 32px;
     font-weight: normal;
-    font-weight: 300;
+    font-weight: 600;
     /* font-weight: bolder; */
     /* font-family: 'Roboto'; */
     /* color: #f8f8f8; */
     /* font-weight: 300; */
-    letter-spacing: .5px;
+    letter-spacing: -.5px;
     margin-bottom: 10px;
+    color: black;
 }
 
 .slogan {
@@ -73,9 +77,14 @@ h3.heading {
     padding: 0;
     margin: 0;
     line-height: normal;
-    font-size: 14px;
+    font-size: 12px;
     letter-spacing: 1.1 5px;
     display: flex;
+
+    letter-spacing: -.5px;
+    font-weight: 300;
+    padding-top: 0;
+    line-height: 12px;
 }
 
 .container {
@@ -84,14 +93,9 @@ h3.heading {
 }
 
 .btn-large:hover {
-    background-color: white;
-    /* border: 1px solid #80cbc4; */
-    border: 1px solid #00bcd4;
-    /* color: #80cbc4; */
-    color: #00bcd4;
-    box-shadow: none;
-    border-radius: 6px;
-    /* display: flex; */
+   cursor: pointer;
+   opacity: 60%;
+   background-color: #00bcd4;
 }
 
 .btn-large {
@@ -99,9 +103,9 @@ h3.heading {
     /* background-color: #80cbc4; */
     background-color: #00bcd4;
     color: white;
-    border: 1px solid white;
+    border: 0px solid white;
     box-shadow: none;
-    font-size: 16px;
+    font-size: 14px;
     border-radius: 6px;
     text-transform: none;
     letter-spacing: normal;
@@ -118,19 +122,19 @@ h3.heading {
     color: #00bcd4;
     border: none;
     border-radius: none;
-    margin: 2px;
-
+    margin: 2px 0;
+    /* display: contents; */
 }
 
 #map {
     position: relative;
-    height: 500px;
+    /* height: 500px;
     max-width: 100%;
     border-radius: 14px;
 
     display: flex;
     flex: 3;
-    position: fixed;
+    position: fixed; */
     overflow: unset;
 }
 
@@ -181,7 +185,6 @@ h3.heading {
     margin-left: 0;
     display: flex;
     gap: 20px;
-    align-items: baseline;
 }
 
 .widget-right {
@@ -208,12 +211,22 @@ h3.heading {
     align-items: center;
 }
 
-
-
 p {
     /* font-size: 18px; */
     /* text-align: start; */
     margin-bottom: 10px;
+    font-size: 12px;
+    line-height: 4px;
+}
+
+.rating {
+    /* font-weight: bold; */
+    display: contents;
+}
+
+.open,
+.closed {
+    display: contents;
 }
 
 .reviews {
@@ -230,11 +243,12 @@ p {
     text-align: center;
     display: flex;
     flex-direction: row;
-    gap: 20px;
+    gap: 0px;
     justify-content: flex-start;
     flex-wrap: wrap;
     flex: 2;
     overflow: auto;
+    margin: 10px 0;
 }
 
 .card-panel {
@@ -247,23 +261,29 @@ p {
     border-radius: 6px;
     padding: 20px;
     width: 250px;
-    justify-content: center;
+    justify-content: space-around;
     min-height: 250px;
+    margin: 6px;
 }
 
 #row1 {
     /* display: flex; */
     width: 100%;
     flex-direction: row;
-    padding: 20px 0;
+    /* padding: 20px 0; */
     margin-left: 0;
+    margin-bottom: 0;
 }
 
 #search-bar {
     display: flex;
     flex-direction: row;
     width: 100%;
+    /* padding-top: 65px; */
+    color: black;
+    margin-top: 80px;
 }
+
 
 .search-label {}
 
@@ -273,11 +293,11 @@ p {
 #results-section2,
 #map {
     transition: all 0.3s linear;
-    border-width: 5px;
+    /* border-width: 5px;
     border-radius: 5px;
     border-style: solid;
     border-color: transparent;
-    border-radius: 12px;
+    border-radius: 12px; */
 }
 
 #search-bar:hover,
@@ -299,7 +319,7 @@ p {
 
 #results,
 #results2 {
-    max-height: 450px;
+    /* max-height: 450px; */
     /* overflow: auto; */
 }
 
@@ -342,7 +362,10 @@ nav {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    height: 80px;
+    height: 70px;
+    padding: 0 10px;
+    position: fixed;
+    z-index: 10000;
 }
 
 .nav-wrapper {
@@ -357,6 +380,7 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: -5px;
 }
 
 
@@ -407,14 +431,101 @@ nav {
     padding: 0px;
 }
 
-.row-main {}
+#results,
+#results2 {
+    overflow: unset;
+    /* flex: unset;
+    width: 100%;     */
+}
+
+#results-section {
+    overflow: auto;
+}
+
+#map_canvas {
+    position: fixed;
+    right: 0;
+    top: 150px;
+    width: 45%;
+    height: 90%;
+    margin: 10px;
+    bottom: 20px;
+}
+
+#map {
+    /* flex: 100%; */
+
+    width: 42%;
+    position: absolute;
+    right: 0;
+    bottom: 0px;
+    height: 100%;
+    top:    0px;
+}
+
+#results-section {
+    width: 60%;
+}
 
 @media only screen and (max-width: 600px) {
+
+    #map {
+        /* flex: 100%; */
+
+        width: 100%;
+        position: absolute;
+        right: 0;
+        /* bottom: 0; */
+        height: 35%;
+        left: 0;
+        top: 15px;
+        margin-bottom: 10px;
+    }
+
+
+    .body-container {
+        /* padding: 5px; */
+
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        padding: 10px;
+        padding-top: 65%;
+    }
+
+    #search-bar {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+    }
+
+    #fixed {
+        position: unset;
+    }
+
+    #map_canvas {
+        position: relative;
+        right: 0;
+        top: 50px;
+        /* width: 45%; */
+        /* height: 90%; */
+        margin: 10px;
+        bottom: 20px;
+
+        width: 100vw;
+        height: 40vh;
+    }
+
     .form-wrapper {
         display: flex;
         flex-direction: column;
         width: 100%;
         height: 100%;
+        gap: 5px;
+
+        display: flex;
+        flex-direction: row;
     }
 
     .input-field {
@@ -422,9 +533,10 @@ nav {
         /* flex-direction: column; */
         width: 100%;
         /* height: 100%; */
-        padding: 0 10px;
-        margin: 10px 5px 5px 5px;
-
+        /* padding: 0 10px; */
+        /* margin: 10px 5px 5px 5px; */
+        line-height: normal;
+        margin: 10px 0;
     }
 
     .row .col.s12 {
@@ -439,15 +551,30 @@ nav {
         display: flex;
         flex: 100%;
         height: 100%;
+        width: 100%;
     }
 
     #results {
         overflow: unset;
     }
 
-    #map {
-        flex: 100%;
+    #results,
+    #results2 {
+        overflow: unset;
+        flex: unset;
+        width: 100%;
     }
+
+    /* #map {
+        /* flex: 100%; */
+
+    /* width: 45%;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    height: 100%;
+    top: 60px;
+    }  */
 
     .row2 {
         display: block !important;
@@ -461,5 +588,38 @@ nav {
 
 #results-section {
     display: flex;
-    flex: 2;
+    flex: 3;
+    display: block;
+}
+
+
+.content__container {
+    height: 100%;
+    width: 100%;
+    display: flex;
+
+}
+
+.content__results {}
+
+.content__map-wrapper {}
+
+
+
+
+.input-field>label {
+    color: black;
+}
+
+.select-wrapper input.select-dropdown {
+    color: black;
+    font-family: 'Poppins';
+}
+
+.bigger {
+    line-height: normal;
+}
+
+h3 {
+    font-size: 26px;
 }
